@@ -1,3 +1,7 @@
+2010-01-29	Pablo de la Concepción <pablo.concepcion@artica.es>
+
+	* lib/PandoraFMS/DataServer.pm: Improved timezone_offset management.
+
 2010-01-26   Sancho Lerena <slerena@artica.es>
 
 	* Core.pm: Fixed bug #2932694 (extra ',' in a SQL sentence). Reported by
